[tool.poetry]
name = "jupyter"
version = "0.1.0"
description = ""
authors = ["Teddy Youn <teddy@bear.engineer>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "^6.1.5"
kotlin-jupyter-kernel = "^0.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
